--- a/clase01/clusterai_2021_clase01_EDA_google_play_store.ipynb
+++ b/clase01/clusterai_2021_clase01_EDA_google_play_store.ipynb
@@ -7,11 +7,11 @@
     "id": "nP84DR6FiNDw"
    },
    "source": [
-    "# ClusterAI 2021\n",
-    "# Ciencia de Datos - Ingenieria Industrial UTN BA\n",
-    "# Curso I5521\n",
-    "# Clase 01: Analisis Exploratorio de Datos (EDA) con datos de Google Play Store Apps\n",
-    "#### Elaborado por: Nicolás Aguirre"
+    "** ClusterAI 2021\n** <br>",
+    "** Ciencia de Datos - Ingenieria Industrial UTN BA\n**",
+    "** Curso I5521\n**",
+    "** Clase 01: Analisis Exploratorio de Datos (EDA) con datos de Google Play Store Apps\n**",
+    "** Elaborado por: Nicolás Aguirre**"
    ]
   },
   {
