--- a/clase01/clusterai_2021_clase01_EDA_google_play_store.ipynb
+++ b/clase01/clusterai_2021_clase01_EDA_google_play_store.ipynb
@@ -8,9 +8,9 @@
    },
    "source": [
     "** ClusterAI 2021\n** <br>",
-    "** Ciencia de Datos - Ingenieria Industrial UTN BA\n**",
-    "** Curso I5521\n**",
-    "** Clase 01: Analisis Exploratorio de Datos (EDA) con datos de Google Play Store Apps\n**",
+    "** Ciencia de Datos - Ingenieria Industrial UTN BA\n**<br>",
+    "** Curso I5521\n**<br>",
+    "** Clase 01: Analisis Exploratorio de Datos (EDA) con datos de Google Play Store Apps\n**<br>",
     "** Elaborado por: Nicolás Aguirre**"
    ]
   },
