--- a/clase04/clusterai_2021_clase04_clasificacion_iris.ipynb
+++ b/clase04/clusterai_2021_clase04_clasificacion_iris.ipynb
@@ -532,25 +532,25 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\langle~\\phi(x_i), ~\\phi(x_j)~\\rangle& = \n",
+    "\\langle\\phi(x_i), \\phi(x_j)\\rangle& = \n",
     "\\begin{pmatrix}\n",
-    "\\langle~\\phi(x_1), ~\\phi(x_1)~\\rangle& \\langle~\\phi(x_1), ~\\phi(x_2)~\\rangle & \\cdots & \\langle~\\phi(x_1), ~\\phi(x_n)~\\rangle\\\\\n",
-    "\\langle~\\phi(x_2), ~\\phi(x_1)~\\rangle& \\langle~\\phi(x_2), ~\\phi(x_2)~\\rangle & \\cdots & \\langle~\\phi(x_2),~\\phi(x_n)~\\rangle\\\\\n",
+    "\\langle\\phi(x_1), \\phi(x_1)\\rangle& \\langle\\phi(x_1), \\phi(x_2)\\rangle & \\cdots & \\langle\\phi(x_1), \\phi(x_n)\\rangle\\\\\n",
+    "\\langle\\phi(x_2), \\phi(x_1)\\rangle& \\langle\\phi(x_2), \\phi(x_2)\\rangle & \\cdots & \\langle\\phi(x_2),\\phi(x_n)\\rangle\\\\\n",
     "\\vdots  & \\vdots  & \\ddots & \\vdots  \\\\\n",
-    "\\langle~\\phi(x_n), ~\\phi(x_2)~\\rangle& \\langle~\\phi(x_n), ~\\phi(x_2)~\\rangle & \\cdots & \\langle~\\phi(x_n), ~\\phi(x_n)~\\rangle\\\\\n",
+    "\\langle\\phi(x_n), \\phi(x_2)\\rangle& \\langle\\phi(x_n), \\phi(x_2)\\rangle & \\cdots & \\langle\\phi(x_n), \\phi(x_n)\\rangle\\\\\n",
     "\\end{pmatrix} \\\\\n",
     "& \\\\\n",
     "\\text{Donde para el}\\\\\n",
     "\\text{Kernel Gaussiano:}\\\\\n",
     "\\\\\n",
-    "\\langle~\\phi(x_i), ~\\phi(x_j)~\\rangle  & = K (x_i, x_j)\\\\\n",
+    "\\langle\\phi(x_i), \\phi(x_j)\\rangle  & = K (x_i, x_j)\\\\\n",
     "& =   \\exp(-\\frac{\\lVert x_i-x_j\\rVert^2}{2\\sigma^2})\\\\\n",
     "& = \\exp(-\\gamma \\lVert x_i-x_j\\rVert^2)  \\qquad \\text{ donde } \\gamma = \\frac{1}{2\\sigma^2}\\\\\n",
     "& = \\exp(-\\gamma (x_{i}^{2}+x_{j}^{2}-2 x_{i} x_{j}^T)\\\\\n",
     "& = \\exp(-\\gamma (x_{i}x_{i}^T+x_{j}x_{j}^T-2 x_{i} x_{j}^T)\\\\\n",
     "\\text{Entonces, gracias al 'kernel trick'}\\\\\n",
     "\\\\\n",
-    "\\langle~\\phi(x_i), ~\\phi(x_j)~\\rangle \n",
+    "\\langle\\phi(x_i), \\phi(x_j)\\rangle \n",
     "& = \\begin{pmatrix}\n",
     "K (x_1, x_1)& K (x_1, x_2) & \\cdots & K (x_1, x_n)\\\\\n",
     "K (x_2, x_1)& K (x_2, x_2)& \\cdots & K (x_2, x_n)\\\\\n",
