--- a/clase07/clusterai_2021_clase07_clustering_toy_examples.ipynb
+++ b/clase07/clusterai_2021_clase07_clustering_toy_examples.ipynb
@@ -40,7 +40,7 @@
     "# Importamos silhouette_score\n",
     "from sklearn.metrics import silhouette_score , rand_score\n",
     "\n",
-    "#from helpers import report_clustering_kmeans, report_clustering_hierarchical"
+    "from helpers import report_clustering_kmeans, report_clustering_hierarchical"
    ]
   },
   {
