--- a/clase08/clusterai_2021_clase08_clustering_wines.ipynb
+++ b/clase08/clusterai_2021_clase08_clustering_wines.ipynb
@@ -444,7 +444,7 @@
    "source": [
     "**Scatter plot con 2 PC:**\n",
     "\n",
-    "**Cluster verdadero vs Clustering con RD+K-Means**"
+    "**Cluster verdadero vs Clustering con PCA+K-Means**"
    ]
   },
   {
@@ -461,7 +461,7 @@
     "plt.xlabel('PC 1')\n",
     "plt.ylabel('PC 2')\n",
     "plt.title('Clustering Verdadero')\n",
-    "# RD + K-Means\n",
+    "# PCA + K-Means\n",
     "plt.figure(figsize=(9,6))\n",
     "plt.scatter(xpca_rd[:,0],xpca_rd[:,1],c=kmeans_rd.labels_.astype(float))\n",
     "plt.scatter(centers_rd[:,0], centers_rd[:,1], marker=\"x\", color='r',s=150)\n",
@@ -534,14 +534,14 @@
     "# Cantidad de PC quer queremos\n",
     "reduced_dim = 3\n",
     "xpca_rd = xpca[:,0:reduced_dim]\n",
-    "# Generamos el modelo K-means + RD\n",
+    "# Generamos el modelo PCA + K-means \n",
     "kmeans_rd = KMeans(n_clusters=3, \n",
     "                   random_state=10).fit(xpca_rd)\n",
     "centers_rd = kmeans_rd.cluster_centers_\n",
     "centers_rd\n",
     "\n",
     "%matplotlib notebook\n",
-    "fig = plt.figure(figsize=(12, 6))#plt.figure()#)\n",
+    "fig = plt.figure(figsize=(12, 6))\n",
     "ax = fig.add_subplot(projection='3d')\n",
     "ax.scatter3D(xpca[:,0], xpca[:,1],xpca[:,3], c=kmeans_rd.labels_)\n",
     "ax.scatter3D(centers_rd[:,0], centers_rd[:,1],centers_rd[:,2], marker=\"o\", color='r',s=150)\n",
@@ -649,7 +649,7 @@
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
-    "fig = plt.figure(figsize=(12, 6))#plt.figure()#figsize=(9, 6))\n",
+    "fig = plt.figure(figsize=(12, 6))\n",
     "ax = fig.add_subplot(projection='3d')\n",
     "ax.scatter3D(xpca[:,0], xpca[:,1],xpca[:,3], c=cluster.labels_)\n",
     "ax.set_xlabel('PC1')\n",
